Removed More vulnerabilities

--- a/data/knowledge.json
+++ b/data/knowledge.json
@@ -106,5 +106,6 @@
     "tell me something interesting": "Did you know that honey never spoils? Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly edible!",
     "random fact": "Octopuses have three hearts and blue blood! Two hearts pump blood to the gills, while the third pumps blood to the rest of the body.",
     "surprise me": "Here's something amazing: A single cloud can weigh more than a million pounds, but it floats because the water droplets are so small and spread out!",
-    "im good": "i am good too"
+    "im good": "i am good too",
+    "what are you?": "i am a chatbot"
 }
